--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,10 @@
     "angular": "~1.4.1",
     "lodash": "~3.9.3",
     "angular-bootstrap": "~0.13.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angular-timeline": "~1.5.2",
+    "angular-animate": "~1.4.1",
+    "angular-scroll-animate": "~0.9.1"
   },
   "dependencies": {}
 }
