--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.3",
     "gulp-connect": "^2.2.0",
+    "gulp-imagemin": "^2.3.0",
     "gulp-inject": "^1.1.1",
     "gulp-jshint": "^1.9.0",
     "gulp-less": "^3.0.3",
@@ -35,6 +36,7 @@
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.0.2",
     "gulp-watch": "^3.0.0",
+    "imagemin-pngquant": "^4.1.0",
     "jshint-stylish": "^1.0.0",
     "merge-stream": "^0.1.7",
     "path": "^0.11.14",
