--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {},
   "devDependencies": {
     "beepbeep": "^1.2.0",
+    "body-parser": "^1.13.1",
     "bump": "^0.2.5",
+    "express": "^4.13.0",
+    "express-validator": "^2.12.1",
     "gulp": "^3.8.10",
     "gulp-angular-templatecache": "^1.5.0",
     "gulp-autoprefixer": "^2.0.0",
@@ -32,13 +35,14 @@
     "gulp-minify-html": "^0.1.8",
     "gulp-ng-html2js": "^0.1.8",
     "gulp-rename": "^1.2.0",
-    "gulp-ruby-sass": "^0.7.1",
+    "gulp-sass": "^2.0.2",
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.0.2",
     "gulp-watch": "^3.0.0",
     "imagemin-pngquant": "^4.1.0",
     "jshint-stylish": "^1.0.0",
     "merge-stream": "^0.1.7",
+    "nodemailer": "^1.3.4",
     "path": "^0.11.14",
     "run-sequence": "^1.0.2",
     "stream-series": "^0.1.1",
