--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.3",
     "gulp-connect": "^2.2.0",
+    "gulp-cssimport": "^1.3.1",
     "gulp-imagemin": "^2.3.0",
     "gulp-inject": "^1.1.1",
     "gulp-jshint": "^1.9.0",
